--- a/src/main/resources/templates/surveyelements/Question.html
+++ b/src/main/resources/templates/surveyelements/Question.html
@@ -37,19 +37,22 @@
     <div class="well">
         <div class="row">
             <div class="col-md-12">
-                <form class="form-group" id="editoptions">
+                <form class="form-group" id="editoptions" th:action="@{/savequestion}" method="post" th:object="${__${'question'}__}">
                     <label id="multiChoiceQuesText">Type your question here</label><br/>
-                    <input type="text" class="text" id="multipleChoiceQuesTextField" oninput="editMultipleChoiceQuesText()"/>
+                    <input type="text" class="text" id="multipleChoiceQuesTextField" name="multipleChoiceQuesTextField" th:field="*{quesText}" oninput="editMultipleChoiceQuesText()"/>
                     <br/><br/>
                     <label>Edit Options</label><br/>
-                    <input type="text" class="text" id="option1Text" oninput="changeMultipleChoiceOptionText('option1')"
-                           placeholder="Option 1"/>
-                    <input type="text" class="text" id="option2Text" oninput="changeMultipleChoiceOptionText('option2')"
+                    <input type="text" class="text" id="option1Text" th:field="*{option1Text}" oninput="changeMultipleChoiceOptionText('option1')" placeholder="Option 1"/>
+                    <input type="text" class="text" id="option2Text" th:field="*{option2Text}" oninput="changeMultipleChoiceOptionText('option2')"
                            placeholder="Option 2"/>
-                    <input type="text" class="text" id="option3Text" oninput="changeMultipleChoiceOptionText('option3')"
+                    <input type="text" class="text" id="option3Text" th:field="*{option3Text}" oninput="changeMultipleChoiceOptionText('option3')"
                            placeholder="Option 3"/>
-                    <input type="text" class="text" id="option4Text" oninput="changeMultipleChoiceOptionText('option4')"
+                    <input type="text" class="text" id="option4Text" th:field="*{option4Text}" oninput="changeMultipleChoiceOptionText('option4')"
                            placeholder="Option 4"/>
+                    <div class="col-md-6">
+                        <br/>
+                        <button type="submit" class="btn btn-primary" th:text="#{form.submit}"></button>
+                    </div>
                 </form>
             </div>
         </div>
